tests/programs/invalid/octal_and_hex_literals.java
public class octal_and_hex_literals {
  protected int x = 0xCAFE;
  protected int y = 0372;
}